--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -128,7 +128,7 @@ p {
 }
 
 .proposal-action--delete {
-  font-weight: bold
+  font-weight: bold;
 }
 
 // Align the expandable-actions with the actions list
@@ -186,4 +186,16 @@ p {
 .host-ip {
   vertical-align: middle;
   color: branding.$eos-bc-gray-900;
+}
+
+.network-devices-table {
+  margin-block-start: fonts.$size-base;
+
+  .device-icon {
+    width: fonts.$size-base;
+
+    svg {
+      vertical-align: middle;
+    }
+  }
 }
