--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -194,3 +194,17 @@ ul.connections-datalist {
     border: 0;
   }
 }
+
+.auto-modal-popup {
+  block-size: auto;
+}
+
+.medium-modal-popup {
+  min-block-size: 55vh;
+  max-block-size: 55vh;
+}
+
+.large-modal-popup {
+  min-block-size: 85vh;
+  max-block-size: 85vh;
+}
